tests/mediawiki/fail/1.19.x/includes/DefaultSettings.php
<?php
/** MediaWiki version number */
$wgVersion = '1.19.21';

